# 42-SH

./: .gitignore  CMakeLists.txt  Makefile  README.md  build.sh  meson.build  meson_options.txt  test.sh
21sh/mypipe/: a.out  mypipe.h
builddir/: .ninja_deps  .ninja_log  42sh  build.ninja  compile_commands.json
builddir/meson-info/: intro-buildoptions.json  intro-buildsystem_files.json  intro-installed.json  intro-projectinfo.json  intro-targets.json  meson-info.json
builddir/meson-logs/: meson-log.txt
mypipe/: mypipe.c
src/: main.c  meson.build
src/buItlin/: meson.build
src/buItlin/echo/: meson.build
src/exec/: exec.c  exec.h  meson.build  mypipe.c  mypipe.h  variable_expention.c  variable_expention.h
src/exec_builtins/: echo.c  echo.h  exec_cmds.c  exec_cmds.h  meson.build  microshell.c  microshell.h  my_cd.c  my_cd.h
src/exec_builtins/builtins/: alias.c  builtins.h  echo.c  meson.build  my_cd.c  my_cd.h  my_exit.c  my_export.c  my_source.c  unset.c
src/lexer/: #token.h#  a.out  lexer.c  lexer.h  meson.build  test_lexer.c  token.c  token.h  utils.c  utils.h
src/main/: main.c  meson.build
src/memory/: free_list.c  free_list.h  hmalloc.c  hmalloc.h  meson.build  test.c
src/parser/: meson.build  parser.c  parser.h  parserJennie.c  parser_armand.c
src/redir/: meson.build  redir.c  redir.h  simple_redir.c
src/struct/: exec_struct.h  fifo_lex.h  gramar_struct.h  grammar_struct.h
src/test/: meson.build  test_echo.c  test_lexer.c
src/test/test_parser/: meson.build  print_parser.c  print_parser.h  tests_fonctionnels.c
src/test_parser/: print_parser.c  print_parser.h  tests.fonctionnels.c  tests_fonctionnels.c
src/utils/: echo.c  echo.h  file2buf.c  file2buf.h  for_pwd.c  for_pwd.h  generate_alias.c  meson.build  redir.c  substit.c  substit.h  test_echo.c  usefull_fonction.c  usefull_fonction.h
src/utils/ast_evaluation/: Makefile  eval.c  expression.h  parser.c
tests/builtins_tests_scripts/: echo_test.sh  echo_test2.sh  echo_test3.sh
tests/my_moulinette/: .#copy.sh  42sh  bad_42sh  cd_tests_basic.yml  cmd_echo_tests.yml  cmd_error_redir.yml  cmd_error_var.yml  cmd_for_tests.yml  cmd_pipe.yml  cmd_var.yml  copy.sh  exit.yml  export.yml  function_basic.yml  hard_if_2.sh  if_basic_tests.yml  if_error_tests.yml  moulinette_acu.yml  pipe_basic_tests.yml  requirements.txt  script_echo_tests.yml  test  tests_def.yml  testsuite.py  testsuite2.py
tests/my_moulinette/shell_script/: random.sh
tests/my_moulinette/shell_script/cmd_var/: .#arg_special.sh  IFS_1.sh  arg_basics.sh  nega.sh
tests/my_moulinette/shell_script/complex_script/: pipe_if_for.sh  pipe_if_for_2.sh  pipe_if_for_3.sh
tests/my_moulinette/shell_script/for/: simple_for_1.sh
tests/my_moulinette/shell_script/if/: hard_if_1.sh  hard_if_elif.sh  simple_if.sh  simple_if_multiple_newlines.sh
tests/my_moulinette/shell_script/redir/: pipe.sh  redir_basics.sh  redir_basics.sh~  redir_basics_2.sh
